# birdstomp

./: Cargo.toml  README.md
assets/: map.tmx
src/: asset_loader.rs  ball.rs  car.rs  collisions.rs  direction_arrow.rs  direction_indicator.rs  enemy.rs  gamepad.rs  main.rs  player.rs  resources.rs  sprites.rs
src/ui/: buttons.rs  gameover.rs  hud.rs  menu.rs  mod.rs  start.rs  start_countdown.rs  styles.rs
